--- a/movie/package.json
+++ b/movie/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
